@@ -1,3 +1,8 @@
+2003-01-13  Jody Goldberg <jody@gnome.org>
+
+	* gnome-theme-manager.c (load_meta_themes) : handle yet another place
+	  where gnome_wm_manager_get_current may be NULL.
+
 Mon Jan 13 15:20:17 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-theme-manager.c (main): gnome_theme_init ()
